# management-system

./: README.md
document_page_procedure/: README.rst  __manifest__.py  checklog-odoo.cfg
document_page_procedure/data/: document_page_procedure.xml
document_page_procedure/demo/: document_page_procedure.xml
document_page_procedure/i18n/: document_page_procedure.pot  hr.po  hr_HR.po
document_page_procedure/readme/: CONFIGURE.md  CONTRIBUTORS.md  CREDITS.md  DESCRIPTION.md
document_page_procedure/views/: document_page_procedure.xml
document_page_quality_manual/: README.rst  __manifest__.py
document_page_quality_manual/data/: document_page.xml
document_page_quality_manual/readme/: CONFIGURE.md  CONTRIBUTORS.md  USAGE.md
mgmtsystem_action/: README.rst  __manifest__.py
mgmtsystem_action/data/: automated_reminder.xml  email_template.xml  mgmtsystem_action_stage.xml
mgmtsystem_action/demo/: mgmtsystem_action.xml
mgmtsystem_action/i18n/: mgmtsystem_action.pot  sv.po
mgmtsystem_action/models/: mgmtsystem_action.py
mgmtsystem_action/reports/: mgmtsystem_action_report.py  mgmtsystem_action_report.xml
mgmtsystem_action/security/: mgmtsystem_action_security.xml
mgmtsystem_action/tests/: test_create_action.py
mgmtsystem_action/views/: menus.xml  mgmtsystem_action.xml  mgmtsystem_action_stage.xml  mgmtsystem_action_tag.xml
mgmtsystem_audit/i18n/: sv.po
mgmtsystem_info_security_manual/: README.rst  __manifest__.py
mgmtsystem_manual/: README.rst  __manifest__.py
mgmtsystem_survey/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml
(+18 files in other folders)
