[project]
name = "odoo-addons-oca-management-system"
version = "18.0.20241203.1"
dependencies = [
    "odoo-addon-document_page_procedure==18.0.*",
    "odoo-addon-document_page_quality_manual==18.0.*",
    "odoo-addon-mgmtsystem==18.0.*",
    "odoo-addon-mgmtsystem_action==18.0.*",
    "odoo-addon-mgmtsystem_manual==18.0.*",
    "odoo-addon-mgmtsystem_survey==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
